--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -15,7 +15,14 @@
 
     <%= f.file_field :image %><br><br>
 
-    <%= f.collection_check_boxes :skill_ids, Skill.all, :id, :name %>
+    <%= f.collection_check_boxes :skill_ids, Skill.all, :id, :name %><br><br>
+
+    <%= f.fields_for :skills do |skill_builder| %>
+        <%= skill_builder.label :name, "Add a new skill" %>
+        <%= skill_builder.text_field :name %>
+    <% end %>
+
+    <br><br>
 
     <%= f.submit %>
 <% end %>
