--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,4 +15,4 @@
 
 <br><br>
 
-<%= button_to "Edit this Project", edit_portfolio_project_path, method: :get %>
+<%= button_to "Edit this Project", edit_portfolio_project_path(@portfolio, @project), method: :get %>
