add delete functionality for projects

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -16,3 +16,7 @@
 <br><br>
 
 <%= button_to "Edit this Project", edit_portfolio_project_path(@portfolio, @project), method: :get %>
+
+<br><br>
+
+<%= button_to "Delete this Project", { :controller => "projects", :action => "destroy", id: params[:id] }, :method => "delete", data: { :confirm => "Are you sure?" } %>
