add flash error and styles on login and sign up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "login";
+@import "signup";
+@import "portfolios";
+@import "projects";
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
