--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,8 @@
             <% if current_user %>
                 <li><%= link_to "Log Out", destroy_user_session_path, method: "DELETE" %></li>
             <% else %>
-                <li><%= link_to "Sign In", new_user_session_path %></li>
+                <li><%= link_to "Sign Up", new_user_registration_path %></li>
+                <li><%= link_to "Log In", new_user_session_path %></li>
             <% end %>
           </ul>
         </div><!-- /.navbar-collapse -->
