style login and sign up pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,11 @@
  *
 
  */
+
+.field_with_errors input {
+  border: 2px solid red;
+}
+
+.field_with_errors textarea {
+  border: 2px solid red;
+}
