--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,3 +1,15 @@
-.xyz-style {
+.flash-style {
   color: red;
+}
+
+#login-page {
+  text-align: center;
+}
+
+#login-wrapper {
+  width: 400px;
+  margin: 0 auto;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 30px;
 }
