--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -1,3 +1,15 @@
-.field_with_errors input {
-  border: 1px solid red;
+#sign-up-page {
+  text-align: center;
+}
+
+#sign-up-wrapper {
+  width: 400px;
+  border: 1px solid black;
+  margin: 0 auto;
+  padding: 30px;
+  border-radius: 10px;
+}
+
+.new_user {
+  margin-bottom: 15px;
 }
