--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -2,9 +2,9 @@
 
 <%= form_for @portfolio, url: user_portfolio_path(@portfolio), html: { method: :put } do |f| %>
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name %><br><br>
 
-    <%= f.collection_select :category_id, Category.all, :id, :name %>
+    <%= f.collection_select :category_id, Category.all, :id, :name %><br><br>
 
     <%= f.submit %>
 <% end %>
