--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,10 +1,18 @@
 <h2>What type of portfolio would you like to create?</h2>
-
+<% if @portfolio.errors %>
+    <h3>Errors:</h3>
+    <ul>
+        <% @portfolio.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+    </ul>
+    <br>
+<% end %>
 <%= form_for(@portfolio) do |f| %>
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name %><br><br>
 
-    <%= f.collection_select :category_id, Category.all, :id, :name %>
+    <%= f.collection_select :category_id, Category.all, :id, :name %><br><br>
 
     <%= f.submit %>
 <% end %>
