--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -2,26 +2,6 @@
 
 <%= form_for @project, url: portfolio_project_path(@portfolio), html: { method: :put } do |f| %>
 
-    <%= f.label :title %>
-    <%= f.text_field :title %><br><br>
-
-    <%= f.label :description %>
-    <%= f.text_area :description %><br><br>
-
-    <%= f.label :github_url %>
-    <%= f.text_field :github_url %><br><br>
-
-    <%= f.file_field :image %><br><br>
-
-    <%= f.collection_check_boxes :skill_ids, Skill.all, :id, :name %><br><br>
-
-    <!-- Edit fields_for to only create one new skill box on edit form -->
-    <%= f.fields_for :skills, @project.skills.build do |skill_builder| %>
-        <%= skill_builder.label :name, "Add a new skill" %>
-        <%= skill_builder.text_field :name %>
-    <% end %>
-
-    <br><br>
-
-    <%= f.submit %>
+    <%= render 'edit_form', f: f %>
+    
 <% end %>
