--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -11,30 +11,6 @@
 
 <%= form_for(@project) do |f| %>
 
-    <%= f.collection_select :portfolio_id, current_user.portfolios.all, :id, :name, {:selected => @portfolio.id } %>
-
-    <%= f.label :title %>
-    <%= f.text_field :title %><br><br>
-
-    <%= f.label :description %>
-    <%= f.text_area :description %><br><br>
-
-    <%= f.label :github_url %>
-    <%= f.text_field :github_url %><br><br>
-
-    <%= f.file_field :image %><br><br>
-
-    <%= f.collection_check_boxes :skill_ids, Skill.all, :id, :name %>
-
-
-    <br><br>
-
-    <%= f.fields_for :skills do |skill_builder| %>
-        <%= skill_builder.label :name, "Add a new skill" %>
-        <%= skill_builder.text_field :name %>
-    <% end %>
-
-    <br><br>
-
-    <%= f.submit %>
+    <%= render 'new_form', f: f %>
+    
 <% end %>
