add skills filter to projects index page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,3 +27,15 @@
 .field_with_errors textarea {
   border: 2px solid red;
 }
+
+.center-block {
+  text-align: center;
+}
+
+.center-container {
+  text-align: center
+}
+
+.img-responsive {
+  width: 100%
+}
