bootstrap and styling upgrades to project and portfolio pages

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -3,3 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .checkbox-container { border:2px solid #ccc; width:300px; height: 200px; overflow-y: scroll; }
+
+#skill-filter {
+  text-align: right;
+}
+
+#recent-projects-row {
+  margin-bottom: 40px;
+}
