--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Portfolios controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.float-btn {
+  float: left;
+  margin-right: 20px;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+#portfolio-name-row {
+  margin-bottom: 40px;
+}
+
+.img-med {
+  max-height: 150px;
+}
+
+.caption {
+  margin-bottom: 20px;
+}
