--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,26 +1,30 @@
-<h1><%= @project.title %></h1>
-<%= image_tag @project.image.url(:medium) %>
-<h3>GitHub URL:</h3>
-<a href="http://www.github.com/<%=@project.github_url%>"><%= @project.github_url %></a>
+<div class="container">
 
-<h3>Project Description:</h3>
-<%= @project.description %>
+    <h1><%= @project.title %></h1>
+    <%= image_tag @project.image.url(:medium) %>
+    <h3>GitHub URL:</h3>
+    <a href="http://www.github.com/<%=@project.github_url%>"><%= @project.github_url %></a>
 
-<h3>Skills</h3>
-<ul>
-<% @project.skills.each do |skill| %>
-    <li><%= skill.name %></li>
-<% end %>
-</ul>
+    <h3>Project Description:</h3>
+    <%= @project.description %>
 
-<br><br>
+    <h3>Skills</h3>
+    <ul>
+    <% @project.skills.each do |skill| %>
+        <li><%= skill.name %></li>
+    <% end %>
+    </ul>
 
-<% if current_user == @project.portfolio.user %>
+    <br><br>
 
-<%= button_to "Edit this Project", edit_portfolio_project_path(@portfolio, @project), method: :get %>
+    <% if current_user == @project.portfolio.user %>
 
-<br><br>
+    <%= button_to "Edit this Project", edit_portfolio_project_path(@portfolio, @project), method: :get %>
 
-<%= button_to "Delete this Project", { :controller => "projects", :action => "destroy", id: params[:id] }, :method => "delete", data: { :confirm => "Are you sure?" } %>
+    <br><br>
 
-<% end %>
+    <%= button_to "Delete this Project", { :controller => "projects", :action => "destroy", id: params[:id] }, :method => "delete", data: { :confirm => "Are you sure?" } %>
+
+    <% end %>
+
+</div>
