add image label to new and edit forms

--- a/app/views/projects/_new_form.html.erb
+++ b/app/views/projects/_new_form.html.erb
@@ -9,6 +9,7 @@
     <%= f.label :github_url %>
     <%= f.text_field :github_url %><br><br>
 
+    <%= f.label :image, 'Project Image' %>
     <%= f.file_field :image %><br><br>
 
     <div class="checkbox-container">
